# docugenr8-shared

./: .gitignore  LICENSE  README.md  pyproject.toml  run.sh  tox.ini
.github/workflows/: code_check.yaml  publish.yaml
scripts/: check.sh  start.sh  version.sh
src/docugenr8-shared/: data_transfer_object.py
src/docugenr8_shared/: colors.py  dto.py
